# ComfyUI_SageUtils

./: .gitignore  CUSTOM_ROUTES.md  ComfyUI_SageUtils.code-workspace  FILE_MANAGEMENT.md  README.md  __init__.py  demo_routes.py  nodes_v1.py  nodes_v3.py  performance_config.py  pyproject.toml  requirements.txt  sage.py  server_routes.py  test_routes.py
assets/: config.json  default_tag_library.json  llm_integration_profiles.json  llm_prompts.json  metadata_templates.json  sage_styles.json  system_prompt.md
docs/: API.md  ARCHITECTURE.md  BUTTON_COMPONENT_GUIDE.md  FORM_ELEMENTS_GUIDE.md  LAYOUT_COMPONENT_GUIDE.md  LLM_ARCHITECTURE_NOTE.md  LLM_PRESET_API.md  LLM_TAB_GUIDE.md  MODELS_TAB_V2_USER_GUIDE.md  PROMPT_BUILDER_GUIDE.md  TAB_MANAGER_GUIDE.md
example_workflows/: Ace 1.5 Example.json  Basic Example.json  Chroma Example.json  Flux Dev Example.json  Image to WAN 22 Video Example.json  LLM Example.json  LM Studio LLM Example.json  Lumina 2 Example.json  NetaYume Lumina Example.json  NoobXL Example.json  Ollama LLM Example.json  Pony Example.json  Pony Upscaling Example.json  Pony to Wan Video Example.json  Z-Image Example.json  sage_example_workflow.json
js/: README.md  cacheSidebar.js  comfyui_gap_analyzer.js  sage.js  settingsUI.js  wildcardExamples.js
nodes/: __init__.py  audio_v3.py  basic.py  conditioning.py  conditioning_v3.py  custom_io_v3.py  deprecated.py  depreciated.py  image.py  image_v3.py  llm.py  llm_v3.py  lmstudio_v3.py  loader.py  loader_v3.py  lora.py  metadata.py  metadata_v3.py  model.py  ollama_v3.py  prompts_v3.py  sampler.py  sampler_v3.py  selector.py  selector_v3.py  settings.py  text.py  text_v3.py  training.py  training_v3.py  util.py  util_v3.py
okf/: OKF_SPEC_0_1.md  index.md  log.md
ref_docs/: civitai_api.md  overview.md  v3_migration.md
routes/: LLM_ROUTES_README.md  ROUTES_DOCUMENTATION.md  __init__.py  base.py  cache_routes.py  gallery_routes.py  llm_routes.py  notes_routes.py  prompt_storage_routes.py  scanning_routes.py  settings_routes.py  tag_routes.py  utility_routes.py  wildcard_routes.py
subgraphs/: Chroma Quick Gen.json  Conditioning Guidance & Reference.json  Image Scale to Total Pixels & Latent.json  Quick Latent.json  XL-Based Quick Gen.json
tests/: conftest.py  (+15 more)
(+613 files in other folders)
